@@ -944,11 +944,12 @@ server = function(input, output, session) {
                               nc = 100,
                               formants = myPars$formants,
                               formantDep = input$formantDep,
+                              formantDepStoch = input$formantDepStoch,
+                              formantWidth = input$formantWidth,
                               lipRad = input$lipRad,
                               mouthAnchors = myPars$mouthAnchors,
                               vocalTract = vocalTract(),
                               temperature = input$temperature,
-                              formantDepStoch = input$formantDepStoch,
                               samplingRate = input$samplingRate,
                               plot = FALSE
       )
@@ -961,11 +962,12 @@ server = function(input, output, session) {
                           nc = 100,
                           formants = myPars$formants,
                           formantDep = input$formantDep,
+                          formantDepStoch = input$formantDepStoch,
+                          formantWidth = input$formantWidth,
                           lipRad = input$lipRad,
                           mouthAnchors = myPars$mouthAnchors,
                           vocalTract = vocalTract(),
                           temperature = input$temperature,
-                          formantDepStoch = input$formantDepStoch,
                           samplingRate = input$samplingRate,
                           plot = TRUE,
                           duration = durSyl_withNoise(),
@@ -1074,11 +1076,12 @@ server = function(input, output, session) {
                                 nc = 100,
                                 formants = myPars$formantsNoise,
                                 formantDep = input$formantDep,
+                                formantDepStoch = 0,
+                                formantWidth = input$formantWidth,
                                 lipRad = input$lipRad,
                                 mouthAnchors = myPars$mouthAnchors,
                                 vocalTract = input$vocalTract,
                                 temperature = input$temperature,
-                                formantDepStoch = 0,
                                 samplingRate = input$samplingRate,
                                 plot = FALSE
         )
@@ -1091,11 +1094,12 @@ server = function(input, output, session) {
                             nc = 100,
                             formants = myPars$formantsNoise,
                             formantDep = input$formantDep,
+                            formantDepStoch = 0,
+                            formantWidth = formantWidth,
                             lipRad = input$lipRad,
                             mouthAnchors = myPars$mouthAnchors,
                             vocalTract = input$vocalTract,
                             temperature = input$temperature,
-                            formantDepStoch = 0,
                             samplingRate = input$samplingRate,
                             plot = TRUE,
                             duration = durSyl_withNoise(),
@@ -1162,6 +1166,7 @@ server = function(input, output, session) {
       formants = myPars$formants,
       formantDep = input$formantDep,
       formantDepStoch = input$formantDepStoch,
+      formantWidth = input$formantWidth,
       vocalTract = vocalTract(),
       subFreq = input$subFreq,
       subDep = input$subDep,
