@@ -5,11 +5,11 @@
 \title{Add formants}
 \usage{
 addFormants(sound, formants, action = c("add", "remove")[1],
-  vocalTract = NA, formantDep = 1, formantDepStoch = 20, lipRad = 6,
-  noseRad = 4, mouthOpenThres = 0, mouthAnchors = NA,
-  interpol = c("approx", "spline", "loess")[3], temperature = 0.025,
-  formDrift = 0.3, formDisp = 0.2, samplingRate = 16000,
-  windowLength_points = 800, overlap = 75)
+  vocalTract = NA, formantDep = 1, formantDepStoch = 20,
+  formantWidth = 1, lipRad = 6, noseRad = 4, mouthOpenThres = 0,
+  mouthAnchors = NA, interpol = c("approx", "spline", "loess")[3],
+  temperature = 0.025, formDrift = 0.3, formDisp = 0.2,
+  samplingRate = 16000, windowLength_points = 800, overlap = 75)
 }
 \arguments{
 \item{sound}{numeric vector with \code{samplingRate}}
@@ -33,6 +33,8 @@ to amplitudes in \code{formants})}
 
 \item{formantDepStoch}{the amplitude of additional stochastic formants added above
 the highest specified formant, dB (only if temperature > 0)}
+
+\item{formantWidth}{= scale factor of formant bandwidth (1 = no change)}
 
 \item{lipRad}{the effect of lip radiation on source spectrum, dB/oct
 (the default of +6 dB/oct produces a high-frequency boost when the mouth is
