@@ -4,7 +4,8 @@ NEW FUNCTIONS:
 
 MINOR:
   * soundgen(): very rapid or instantaneous attack is now achievable without adjusting windowLength
-  * soundgen() and soundgen_app(): noiseAnchors are scaled appropriately as syllable length varies due to jitter, while post-syllabic noiseAnchors are not scaled with syllable duration (i.e. the length of post-syllabic aspiration is held constant as syllable length varies)
+  * soundgen(): a top-level scaling factor formantWidth for simple control over formant bandwidth
+  * soundgen(): noiseAnchors are scaled appropriately as syllable length varies due to jitter, while post-syllabic noiseAnchors are not scaled with syllable duration (i.e. the length of post-syllabic aspiration is held constant as syllable length varies)
   * soundgen(): interpol affects the smoothing of mouth anchors
   * analyze(), segment(): streamlined and extended plotting options, plots saved properly (bug)
   * segment(): pauseLen_sd no longer always returns NA (bug)
